hphp/hack/test/typecheck/case_sensitive_inheritance7.php
<?hh // strict
class A {
  public function FOO(): void {}
}

class B extends A {
  public static function foo(): void {}
}
